# TAPL

./: .ghci  .gitignore  .hlint.yaml  .restyled.yaml  .travis.yml  Makefile  MkDoc.hs  Readme.md  Setup.hs  cabal.haskell-ci  cabal.project  default.nix  haskell-ci.tasty-discover.patch  note.md  ormolu.yaml  package.yaml  stack-15.yaml  stack-8.2.2.yaml  stack-lts-12.yaml  stack-lts-14.yaml  stack-lts-15.yaml  stack-nightly.yaml  stack.yaml  style.sh  tapl.cabal
subs/arith/: .gitignore  ChangeLog.md  README.md  arith.cabal  package.yaml
subs/arith/docs/: Language-NB-Parser.html  Language-NB-Types.html  Language-NB.html  arith.txt  doc-index.html  doc-index.json  index.html
subs/arith/docs/src/: Language.NB.Parser.html  Language.NB.Types.html  Language.NB.html  Paths_arith.html
subs/arith/src/Language/: NB.hs
subs/arith/src/Language/NB/: Eval.hs  Parser.hs  Type.hs  Types.hs
subs/arith/test/: NB.hs
subs/arith/test/NB/: Eval.hs  Parser.hs
subs/bool/: .gitignore  ChangeLog.md  bool.cabal  package.yaml
subs/bool/docs/: Language-B-Example.html  Language-B-Parser.html  Language-B-Types.html  Language-B.html  bool.txt  doc-index.html  doc-index.json  index.html
subs/bool/docs/src/: Language.B.Example.html  Language.B.Parser.html  Language.B.Types.html  Language.B.html  Paths_bool.html
subs/bool/src/Language/: B.hs
subs/bool/src/Language/B/: Eval.hs  Example.hs  Parser.hs  Type.hs  Types.hs
subs/bool/test/: B.hs
subs/bool/test/B/: Eval.hs  Parser.hs
subs/featherweight-java/: featherweight-java.cabal
subs/featherweight-java/example/: program.fj
subs/featherweight-java/src/Language/: FJ.hs
subs/featherweight-java/src/Language/FJ/: Auxiliary.hs  Eval.hs  Example.hs  Helper.hs  Parser.hs  Pretty.hs  Type.hs
subs/featherweight-java/test/: FJ.hs
subs/featherweight-java/test/FJ/: Auxiliary.hs  Eval.hs  Parser.hs  Pretty.hs
subs/featherweight-java/test/resource/: test1.fj  test2.fj  test3.fj
subs/lambda-core/: .gitignore  ChangeLog.md  README.md  lambda-core.cabal  package.yaml
subs/lambda-core/docs/: Language-Core-Parser.html  Language-Core-Pretty.html  Language-Core-Types.html  Language-Core.html  doc-index.html  doc-index.json  index.html  lambda-core.txt
subs/lambda-core/docs/src/: Language.Core.Parser.html  Language.Core.Pretty.html  Language.Core.Types.html  Language.Core.html  Prelude.html
subs/lambda-core/src/: Prelude.hs
subs/lambda-core/src/Language/: Core.hs
subs/lambda-core/src/Language/Core/: Parser.hs  Pretty.hs  Types.hs
subs/lambda-fullsimple/: .gitignore  ChangeLog.md  README.md  lambda-fullsimple.cabal  package.yaml
subs/lambda-fullsimple/docs/: Language-FullSimpleLambda-Internal.html  Language-FullSimpleLambda-Parser.html  Language-FullSimpleLambda-Pretty.html  Language-FullSimpleLambda-TypeCheck.html  Language-FullSimpleLambda-Types.html  Language-FullSimpleLambda.html  doc-index.html  doc-index.json  index.html  lambda-fullsimple.txt
subs/lambda-fullsimple/docs/src/: Language.FullSimpleLambda.Internal.html  Language.FullSimpleLambda.Parser.html  Language.FullSimpleLambda.Pretty.html  Language.FullSimpleLambda.TypeCheck.html  Language.FullSimpleLambda.Types.html  Language.FullSimpleLambda.html  Paths_lambda_fullsimple.html
subs/lambda-fullsimple/src/Language/: FullSimpleLambda.hs
subs/lambda-fullsimple/test/: FullSimpleLambda.hs
subs/lambda-fullsimple/test/Test/: Unit.hs
subs/lambda-simple/: .gitignore  ChangeLog.md  README.md  lambda-simple.cabal  package.yaml
subs/lambda-simple/docs/: Language-SimpleLambda-Parser.html  Language-SimpleLambda-Pretty.html  Language-SimpleLambda-Types.html  Language-SimpleLambda.html  doc-index.html  doc-index.json  index.html  lambda-simple.txt
subs/lambda-simple/docs/src/: Language.SimpleLambda.Parser.html  Language.SimpleLambda.Pretty.html  Language.SimpleLambda.Types.html  Language.SimpleLambda.html  Paths_lambda_simple.html
subs/lambda-simple/src/Language/: SimpleLambda.hs
subs/lambda-simple/src/Language/SimpleLambda/: Parser.hs  (+2 more)
subs/lambda-simple/test/: SimpleLambda.hs
subs/lambda-untyped/: .gitignore  ChangeLog.md  README.md  lambda-untyped.cabal  package.yaml
subs/lambda-untyped/docs/: Language-UntypedLambda-Examples.html  Language-UntypedLambda-Lib-Base.html  Language-UntypedLambda-Lib-Bool.html  Language-UntypedLambda-Lib-Church.html  Language-UntypedLambda-Lib-Either.html  Language-UntypedLambda-Lib-Int.html  Language-UntypedLambda-Lib-List.html  Language-UntypedLambda-Lib-NB.html  Language-UntypedLambda-Lib-Pair.html  Language-UntypedLambda-Lib-Util.html  Language-UntypedLambda-Parser.html  Language-UntypedLambda-Prelude.html  Language-UntypedLambda-Types.html  Language-UntypedLambda.html  doc-index.html  doc-index.json  index.html  lambda-untyped.txt
subs/lambda-untyped/docs/src/: Language.UntypedLambda.Examples.html  Language.UntypedLambda.Lib.Base.html  Language.UntypedLambda.Lib.Bool.html  Language.UntypedLambda.Lib.Church.html  Language.UntypedLambda.Lib.Either.html  Language.UntypedLambda.Lib.Int.html  Language.UntypedLambda.Lib.List.html  Language.UntypedLambda.Lib.NB.html  Language.UntypedLambda.Lib.Pair.html  Language.UntypedLambda.Lib.Util.html  Language.UntypedLambda.Parser.html  Language.UntypedLambda.Prelude.html  Language.UntypedLambda.Types.html  Language.UntypedLambda.html  Prelude.html
subs/lambda-untyped/src/: Prelude.hs
subs/lambda-untyped/src/Language/: UntypedLambda.hs
subs/lambda-untyped/test/: UntypedLambda.hs  Utils.hs
subs/recon/: recon.cabal
subs/recon/src/Language/: Ex22_3_10.hs  Ex22_3_11.hs  Ex22_4_6.hs  Ex22_5_5.hs  Ex22_5_7.hs  Ex22_7_1.hs  Recon.hs
subs/systemf/: systemf.cabal
subs/systemf/src/Language/: SystemF.hs
subs/systemf/test/: SystemF.hs
subs/term/: .gitignore  ChangeLog.md  README.md  package.yaml  term.cabal
subs/term/docs/: Term-HashSet.html  Term-Set.html  Term-Types.html  doc-index.html  doc-index.json  index.html  term.txt
subs/term/docs/src/: Paths_term.html  Term.HashSet.html  Term.Set.html  Term.Types.html
subs/term/src/Term/: HashSet.hs  Set.hs  Types.hs
subs/term/test/: Term.hs
(+295 files in other folders)
