cabal-version: 2.4
name:          tapl
version:       0.1.0
tested-with:   GHC ==8.6.5 || ==8.8.3

common deps
  default-extensions:
    NoImplicitPrelude
    DerivingVia
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    RecordWildCards
    StrictData
    TypeApplications
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  build-depends:
    , base         >=4.12 && <4.14
    , haskeline    ^>=0.8
    , lambda-core
    , rio          ^>=0.1
    , rio-orphans  ^>=0.1

  default-language:   Haskell2010

common app
  build-depends: tapl

library
  import:          deps

  -- cabal-fmt: expand src
  exposed-modules:
    LambdaRepl
    LambdaRepl.Options
    LambdaRepl.Types

  hs-source-dirs:  src
  build-depends:   prettyprinter >=1.2 && <1.7

executable nb
  import:        deps, app
  main-is:       app/NB.hs
  build-depends: arith

executable proofb
  import:        deps, app
  main-is:       app/ProofB.hs
  build-depends:
    , bool
    , prettyprinter  >=1.2 && <1.7

executable untyped-lambda
  import:        deps, app
  main-is:       app/UntypedLambda.hs
  build-depends: lambda-untyped

executable simple-lambda
  import:        deps, app
  main-is:       app/SimpleLambda.hs
  build-depends: lambda-simple

executable fullsimple-lambda
  import:        deps, app
  main-is:       app/FullSimpleLambda.hs
  build-depends: lambda-fullsimple

benchmark gauge
  import:        deps
  type:          exitcode-stdio-1.0
  main-is:       bench/Gauge.hs
  build-depends:
    , gauge  ^>=0.2
    , term
