cabal-version: 2.4
name:          tapl
version:       0.1.0
tested-with:   GHC ==8.6.5 || ==8.8.3

common common
  default-extensions:
    NoImplicitPrelude
    DerivingVia
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    RecordWildCards
    StrictData
    TypeApplications
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  build-depends:
    , base
    , rio

  default-language:   Haskell2010

common app
  build-depends: tapl
  ghc-options:   -O2

library
  import:          common

  -- cabal-fmt: expand src
  exposed-modules:
    LambdaRepl
    LambdaRepl.Options
    LambdaRepl.Types

  hs-source-dirs:  src
  build-depends:
    , haskeline
    , lambda-core
    , prettyprinter
    , rio-orphans

executable nb
  import:        common, app
  main-is:       app/NB.hs
  build-depends:
    , arith
    , haskeline
    , lambda-core

executable bool
  import:        common, app
  main-is:       app/B.hs
  build-depends: bool

executable untyped-lambda
  import:        common, app
  main-is:       app/UntypedLambda.hs
  build-depends:
    , haskeline
    , lambda-core
    , lambda-untyped

executable simple-lambda
  import:        common, app
  main-is:       app/SimpleLambda.hs
  build-depends:
    , haskeline
    , lambda-core
    , lambda-simple

executable fullsimple-lambda
  import:        common, app
  main-is:       app/FullSimpleLambda.hs
  build-depends:
    , haskeline
    , lambda-core
    , lambda-fullsimple

executable fj
  import:        common, app
  main-is:       app/FJ.hs
  build-depends:
    , featherweight-java
    , haskeline
    , lambda-core

benchmark gauge
  import:        common
  type:          exitcode-stdio-1.0
  main-is:       bench/Gauge.hs
  build-depends:
    , gauge
    , term
