cabal-version: 2.4
name:          bool
version:       0.1.0.0
tested-with:   GHC ==8.6.5 || ==8.8.3

common deps
  default-extensions:
    NoImplicitPrelude
    DerivingVia
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    StrictData
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  build-depends:
    , base
    , rio

  default-language:   Haskell2010

library
  import:          deps

  -- cabal-fmt: expand src
  exposed-modules:
    Language.B
    Language.B.Example
    Language.B.Parser
    Language.B.Types

  hs-source-dirs:  src
  build-depends:
    , lambda-core
    , prettyprinter
    , trifecta

test-suite bool-test
  import:             deps
  type:               exitcode-stdio-1.0
  main-is:            Driver.hs

  -- cabal-fmt: expand test -Driver
  other-modules:      B
  hs-source-dirs:     test
  build-depends:
    , bool
    , tasty
    , tasty-hunit

  build-tool-depends: tasty-discover:tasty-discover -any
