cabal-version: 2.4
name:          featherweight-java
version:       0.1.0.0
tested-with:   GHC ==8.6.5 || ==8.8.3

common deps
  default-extensions:
    NoImplicitPrelude
    DerivingVia
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    StrictData
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  build-depends:
    , base  >=4.12 && <4.14
    , rio   ^>=0.1

  default-language:   Haskell2010

library
  import:          deps
  hs-source-dirs:  src

  build-depends: megaparsec ^>=8.0

  -- cabal-fmt: expand src
  exposed-modules:
    Language.FJ,
  exposed-modules: Language.FJ
  hs-source-dirs:  src
    Language.FJ.Type