cabal-version: 2.4
name:          featherweight-java
version:       0.1.0.0
tested-with:   GHC ==8.6.5 || ==8.8.3

common deps
  default-extensions:
    NoImplicitPrelude
    DerivingVia
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    StrictData
    TypeApplications
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  build-depends:
    , base
    , megaparsec
    , prettyprinter
    , rio

  default-language:   Haskell2010

library
  import:          deps
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Language.FJ
    Language.FJ.Auxiliary
    Language.FJ.Eval
    Language.FJ.Example
    Language.FJ.Parser
    Language.FJ.Pretty
    Language.FJ.Type

test-suite fj-test
  import:             deps
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Driver.hs
  build-depends:
    , featherweight-java
    , hspec-megaparsec
    , tasty
    , tasty-hspec

  build-tool-depends: tasty-discover:tasty-discover -any

  -- cabal-fmt: expand test -Driver
  other-modules:
    FJ.Auxiliary
    FJ.Eval
    FJ.Parser
    FJ.Pretty
