cabal-version: 2.4
name:          lambda-core
version:       0.1.0.0

library
  -- cabal-fmt: expand src -Prelude
  exposed-modules:
    Language.Core
    Language.Core.Parser
    Language.Core.Pretty
    Language.Core.Types

  other-modules:      Prelude
  hs-source-dirs:     src
  default-extensions:
    MultiWayIf
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  build-depends:
    , base            ^>=4.12
    , base-noprelude  ^>=4.12
    , prettyprinter   ^>=1.3
    , rio             ^>=0.1.12
    , trifecta        ^>=2

  default-language:   Haskell2010
