cabal-version: 2.4
name:          lambda-core
version:       0.1.0.0
tested-with:   GHC ==8.6.5 || ==8.8.3

library
  -- cabal-fmt: expand src -Prelude
  exposed-modules:
    Language.Core
    Language.Core.Parser
    Language.Core.Pretty
    Language.Core.Types

  other-modules:      Prelude
  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    DerivingVia
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    StrictData
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  build-depends:
    , base
    , base-noprelude
    , prettyprinter
    , rio
    , trifecta

  default-language:   Haskell2010
