cabal-version: 2.4
name:          lambda-fullsimple
version:       0.1.0.0
tested-with:   GHC ==8.6.5 || ==8.8.3

common deps
  default-extensions:
    NoImplicitPrelude
    DerivingVia
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    StrictData
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  build-depends:
    , base
    , rio

  default-language:   Haskell2010

library
  import:          deps

  -- cabal-fmt: expand src -Language.FullSimpleLambda.System.RecordPattern
  exposed-modules:
    Language.FullSimpleLambda
    Language.FullSimpleLambda.Class
    Language.FullSimpleLambda.Internal
    Language.FullSimpleLambda.Parser
    Language.FullSimpleLambda.Pretty
    Language.FullSimpleLambda.System.As
    Language.FullSimpleLambda.System.Let
    Language.FullSimpleLambda.System.Pair
    Language.FullSimpleLambda.System.Record
    Language.FullSimpleLambda.System.Seq
    Language.FullSimpleLambda.System.Tuple
    Language.FullSimpleLambda.System.Unit
    Language.FullSimpleLambda.System.Wildcard
    Language.FullSimpleLambda.TypeCheck
    Language.FullSimpleLambda.Types

  hs-source-dirs:  src
  build-depends:
    , lambda-core
    , parsers
    , prettyprinter
    , transformers
    , trifecta

test-suite lambda-fullsimple-test
  import:             deps
  type:               exitcode-stdio-1.0
  main-is:            Driver.hs

  -- cabal-fmt: expand test -Driver
  other-modules:
    FullSimpleLambda
    Test.Unit

  hs-source-dirs:     test
  build-depends:
    , lambda-fullsimple
    , tasty
    , tasty-hunit

  build-tool-depends: tasty-discover:tasty-discover -any
