cabal-version: 2.4
name:          lambda-simple
version:       0.1.0.0
tested-with:   GHC ==8.6.5

common deps
  default-extensions:
    NoImplicitPrelude
    MultiWayIf
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  build-depends:
    , base  ^>=4.12
    , rio   ^>=0.1.12

library
  import:           deps

  -- cabal-fmt: expand src
  exposed-modules:
    Language.SimpleLambda
    Language.SimpleLambda.Parser
    Language.SimpleLambda.Pretty
    Language.SimpleLambda.Types

  other-modules:    Paths_lambda_simple
  hs-source-dirs:   src
  build-depends:
    , lambda-core
    , parsers        ^>=0.12.10
    , prettyprinter  ^>=1.3
    , transformers   ^>=0.5.6
    , trifecta       ^>=2

  default-language: Haskell2010

test-suite lambda-simple-test
  import:           deps
  type:             exitcode-stdio-1.0
  main-is:          Driver.hs

  -- cabal-fmt: expand test -Driver
  other-modules:    SimpleLambda
  hs-source-dirs:   test
  build-depends:
    , lambda-simple
    , tasty          ^>=1.2.3
    , tasty-hunit    ^>=0.10.0

  default-language: Haskell2010
