cabal-version: 2.4
name:          lambda-untyped
version:       0.1.0.0
tested-with:   GHC ==8.6.5 || ==8.8.3

common deps
  default-extensions:
    NoImplicitPrelude
    DerivingVia
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    StrictData
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  build-depends:
    , base
    , lambda-core
    , rio

  default-language:   Haskell2010

library
  import:          deps

  -- cabal-fmt: expand src -Prelude
  exposed-modules:
    Language.UntypedLambda
    Language.UntypedLambda.Examples
    Language.UntypedLambda.Lib.Base
    Language.UntypedLambda.Lib.Bool
    Language.UntypedLambda.Lib.Church
    Language.UntypedLambda.Lib.Either
    Language.UntypedLambda.Lib.Int
    Language.UntypedLambda.Lib.List
    Language.UntypedLambda.Lib.NB
    Language.UntypedLambda.Lib.Pair
    Language.UntypedLambda.Lib.Util
    Language.UntypedLambda.Parser
    Language.UntypedLambda.Prelude
    Language.UntypedLambda.Types

  other-modules:   Prelude
  hs-source-dirs:  src
  build-depends:
    , parsers
    , prettyprinter
    , transformers
    , trifecta

test-suite lambda-untyped-test
  import:             deps
  type:               exitcode-stdio-1.0
  main-is:            Driver.hs

  -- cabal-fmt: expand test -Driver
  other-modules:
    UntypedLambda
    UntypedLambda.Lib.Bool
    UntypedLambda.Lib.Church
    UntypedLambda.Lib.Int
    UntypedLambda.Lib.List
    UntypedLambda.Lib.NB
    UntypedLambda.Lib.Pair
    Utils

  hs-source-dirs:     test
  build-depends:
    , lambda-untyped
    , tasty
    , tasty-hunit

  build-tool-depends: tasty-discover:tasty-discover -any
