cabal-version: 2.4
name:          recon
version:       0.1.0.0
tested-with:   GHC ==8.6.5

common deps
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  build-depends:
    , base        ^>=4.12
    , containers
    , rio

library
  import:           deps

  -- cabal-fmt: expand src
  exposed-modules:
    Language.Ex22_3_10
    Language.Ex22_3_11
    -- Language.Ex22_4_6
    -- Language.Ex22_5_5
    -- Language.Ex22_5_7
    -- Language.Ex22_7_1
    Language.Recon

  hs-source-dirs:   src
  default-language: Haskell2010
