cabal-version: 2.4
name:          recon
version:       0.1.0.0
tested-with:   GHC ==8.6.5

common deps
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  build-depends:
    , base        ^>=4.12
    , containers
    , rio

library
  import:           deps

  -- cabal-fmt: expand src
  exposed-modules:
    Language.Recon
    Language.Recon.Sigma
    Language.Recon.Type
    Language.Recon.TySubst
    Language.Recon.Exercise.Ex22_3_10
    Language.Recon.Exercise.Ex22_3_11
    Language.Recon.Exercise.Ex22_4_6
    Language.Recon.Exercise.Ex22_5_5
    Language.Recon.Exercise.Ex22_5_7
    Language.Recon.Exercise.Ex22_7_1

  hs-source-dirs:   src
  default-language: Haskell2010
