cabal-version: 2.4
name:          recon
version:       0.1.0.0
tested-with:   GHC ==8.6.5 || ==8.8.3

common deps
  default-extensions:
    NoImplicitPrelude
    DerivingVia
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    StrictData
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  build-depends:
    , base
    , rio

  default-language:   Haskell2010

library
  import:          deps
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Language.Recon
    Language.Recon.Exercise.Ex22_3_10
    Language.Recon.Exercise.Ex22_3_11
    Language.Recon.Exercise.Ex22_4_6
    Language.Recon.Exercise.Ex22_5_5
    Language.Recon.Exercise.Ex22_5_7
    Language.Recon.Exercise.Ex22_7_1
    Language.Recon.Sigma
    Language.Recon.Type
    Language.Recon.TySubst

test-suite unit-test
  import:             deps
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Driver.hs
  build-depends:
    , recon
    , tasty
    , tasty-hunit

  -- cabal-fmt: expand test -Driver
  other-modules:
    Test.Language.Recon.Exercise.Ex22_3_10
    Test.Language.Recon.Exercise.Ex22_4_6
    Test.Language.Recon.Recon

  build-tool-depends: tasty-discover:tasty-discover -any
